webapp/static/aikif.css
/*   aikif.css	written by Duncan Murray 25/5/2014


--------------------------------
			Typography
----------------------------------*/

body {
	font-family:  Helvetica, Arial, sans-serif;
}

h1 {
	font-size: 170%;
	font-style: normal;
	font-weight: normal;
	letter-spacing:1px;
    text-align:justify;
    text-align:left;
    
}

h4 {
	font-size: 90%;
	font-weight: normal;
	text-align:justify;
    text-align:left;
    font-style:italic;
}

p  {
	font-size: 100%;
    text-align:justify;
}

TD a {
	font-size: 100%;
    text-align:justify;
}

TD {
	font-size: 90%;
    text-align: justify;
	color: black;
}

#header {
	font-size: 110%;
    align: center;
    width: 100%;
}

#menu_list a {
	text-decoration: none;
	letter-spacing:0px;
}
#menu_list a:hover {
	--font-weight:bold;
	color:blue;
}

#footer {
	font-size: 80%;
}

/*--------------------------------
			Layout
----------------------------------*/

/*Layout of the web page */
#container {   
	width: 100%; /*1200px; */ 
	margin: 0px auto;   
  	overflow:hidden;
  	padding: 0px;  
  	text-align: left;
}

#header {    
	float: left;
	margin: 0px 0px 0px 0px;
	padding: 0px;
	position: relative;
}

#header img {
		width: 100%; /*1200px; */ 
}

/*Menu */
#menu_list {	
	list-style:none; 
	margin: 10px 10px 0px; 
	padding: 0px; 
}
#menu_list li {	
	float: left; 
	width: 80px;
	padding: 0px 20px 0px 0px;
}


table tr td  th{
    vertical-align: top;
	float: left;
} 

pre {
	margin: 0 0 0 0;
}

#content {     
	/*height: 460px;   */ 
	/*width: 980px;*/
	width: 100%;
	float: center;  
	overflow: auto; 
	padding: 0px 0px 0px 30px;  
}

#table_list {
	float: left;
	width: 40%;
	overflow: auto; 
}

#table_data {
	float: right;
	overflow: auto; 
	width: 60%;
}



#footer {
	height: 28px;
	width: 960px;	
	float: left;
	margin: 80px 0px 0px 0px; 
	padding: 0px;
	text-align: center;        
}

.as-table {
    border: solid 1px #DDEEEE;
    border-collapse: collapse;
    border-spacing: 0;
    font: normal 13px Arial, sans-serif;
}
.as-table thead th {
    background-color: #DDEFEF;
    border: solid 1px #DDEEEE;
    color: #336B6B;
    padding: 10px;
    text-align: left;
    text-shadow: 1px 1px 1px #fff;
}
.as-table tbody td {
    border: solid 1px #DDEEEE;
    color: #333;
    padding: 10px;
    text-shadow: 1px 1px 1px #fff;
}
.as-table-zebra tbody tr:nth-child(odd) {
    background-color: #fff;
}
.as-table-zebra tbody tr:nth-child(even) {
    background-color: #EEF7EE;
}
.as-table-horizontal tbody td {
    border-left: none;
    border-right: none;
}



/*--------------------------------
			Colour
----------------------------------*/
/* Standard colour values - rgb(255, 255, 255)*/


body {   	 
	background-color: rgb(255, 255, 255); 
	vertical-align: top;
}

#container { 
	background-color: rgb(255, 255, 255); 
}

#header { 
	color: rgb(176, 176, 176); /*#B0B0B0 ;*/
}

#footer {
	color: rgb(128, 128, 128); /*gray;*/
}

#menu_list a {	
	#color: rgb(0, 0, 0); /*#000 ; 	*/
	color: grey; /*#000 ; 	*/
}
#top_menu_selected a {
	#color: rgb(192, 48, 0); /*#C30 ; */
	color: black; /*#C30 ; */
}

